// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should accept the style prop 1`] = `
.emotion-0 {
  padding: 0.25rem;
  font-weight: bold;
  border-radius: 4px;
  white-space: nowrap;
  background: #DCDCE0;
  color: green;
}

<div>
  <span
    class="emotion-0"
  >
    Normal
  </span>
</div>
`;

exports[`should render correctly 1`] = `
.emotion-0 {
  padding: 0.25rem;
  font-weight: bold;
  border-radius: 4px;
  white-space: nowrap;
  background: #DCDCE0;
}

<div>
  <span
    class="emotion-0"
  >
    Normal
  </span>
</div>
`;

exports[`should render correctly 2`] = `
.emotion-0 {
  padding: 0.25rem;
  font-weight: bold;
  border-radius: 4px;
  white-space: nowrap;
  background: #BF4600;
  color: #FFFFFF;
}

<div>
  <span
    class="emotion-0"
  >
    Alert
  </span>
</div>
`;

exports[`should render correctly 3`] = `
.emotion-0 {
  padding: 0.25rem;
  font-weight: bold;
  border-radius: 4px;
  white-space: nowrap;
  background: #D83A2E;
  color: #FFFFFF;
}

<div>
  <span
    class="emotion-0"
  >
    Danger
  </span>
</div>
`;

exports[`should render correctly 4`] = `
.emotion-0 {
  padding: 0.25rem;
  font-weight: bold;
  border-radius: 4px;
  white-space: nowrap;
  background: #0A67D1;
  color: #FFFFFF;
}

<div>
  <span
    class="emotion-0"
  >
    Info
  </span>
</div>
`;

exports[`should render correctly 5`] = `
.emotion-0 {
  padding: 0.25rem;
  font-weight: bold;
  border-radius: 4px;
  white-space: nowrap;
  background: #097D05;
  color: #FFFFFF;
}

<div>
  <span
    class="emotion-0"
  >
    Success
  </span>
</div>
`;
